Refactor logic to Typescript
Change-Id: Ief0d79a41922e64cee0b70dbe8826e920db00112

--- a/public/index.html
+++ b/public/index.html
@@ -216,5 +216,20 @@ limitations under the License.
         </div>
       </div>
     </div>
+
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        new App();
+        // Init Firebase
+        const firebaseConfig = {
+          apiKey: 'AIzaSyCxLwHelYYu6_4FCmxEiwGB3DJHem6-vsk',
+          authDomain: 'nightingale-73361.firebaseapp.com',
+          projectId: 'nightingale-73361',
+          appId: '1:856168060350:web:1ab0fa39c3f6b9e4ddd5ef',
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+      });
+    </script>
   </body>
 </html>
