Support importing SSML via URL
Regenerate timeline by importing encoded SSML

Bug: 115889232
Change-Id: Ie2705c58e4a5f88abb148e82666644a9eba6e574

--- a/public/index.html
+++ b/public/index.html
@@ -111,6 +111,9 @@ limitations under the License.
         <paper-button dialog-confirm autofocus>Close</paper-button>
       </div>
       <pre id="ssml-gen"></pre>
+      <span>
+        <a href="#" id="ssml-reimport">Save this link to import</a>
+      </span>
     </paper-dialog>
 
     <!-- CLIP EDITOR MODAL -->
