Fix build and serve issues
Tested on newly cloned repo

Change-Id: I273b500ccef4ee9a3df22553c90879683acb7149

--- a/public/index.html
+++ b/public/index.html
@@ -188,7 +188,7 @@ limitations under the License.
 
     <script>
       document.addEventListener('DOMContentLoaded', () => {
-        new App();
+        new Nightingale.App();
         // Init Firebase
         const firebaseConfig = {
           apiKey: 'AIzaSyCxLwHelYYu6_4FCmxEiwGB3DJHem6-vsk',
